pr feedback